--- a/SCME.UI/CustomControl/ListViewResults.xaml
+++ b/SCME.UI/CustomControl/ListViewResults.xaml
@@ -338,7 +338,7 @@
                         </Label.Resources>
                         <Label.Visibility>
                             <MultiBinding Converter="{StaticResource MBvtRSMTT2V}">
-                                <Binding Path="TestType"/>
+                                <Binding Path="UdsmUrsmTestType"/>
                                 <Binding Path="UseUdsmUrsm"/>
                                 <Binding Source="{StaticResource IndexOfDirectInEnum}"/>
                             </MultiBinding>
@@ -350,7 +350,7 @@
                         </Label.Resources>
                         <Label.Visibility>
                             <MultiBinding Converter="{StaticResource MBvtRSMTT2V}">
-                                <Binding Path="TestType"/>
+                                <Binding Path="UdsmUrsmTestType"/>
                                 <Binding Path="UseUdsmUrsm"/>
                                 <Binding Source="{StaticResource IndexOfDirectInEnum}"/>
                             </MultiBinding>
@@ -363,7 +363,7 @@
                         </Label.Resources>
                         <Label.Visibility>
                             <MultiBinding Converter="{StaticResource MBvtRSMTT2V}">
-                                <Binding Path="TestType"/>
+                                <Binding Path="UdsmUrsmTestType"/>
                                 <Binding Path="UseUdsmUrsm"/>
                                 <Binding Source="{StaticResource IndexOfDirectInEnum}"/>
                             </MultiBinding>
@@ -375,7 +375,7 @@
                         </Label.Resources>
                         <Label.Visibility>
                             <MultiBinding Converter="{StaticResource MBvtRSMTT2V}">
-                                <Binding Path="TestType"/>
+                                <Binding Path="UdsmUrsmTestType"/>
                                 <Binding Path="UseUdsmUrsm"/>
                                 <Binding Source="{StaticResource IndexOfDirectInEnum}"/>
                             </MultiBinding>
@@ -388,7 +388,7 @@
                         </Label.Resources>
                         <Label.Visibility>
                             <MultiBinding Converter="{StaticResource MBvtRSMTT2V}">
-                                <Binding Path="TestType"/>
+                                <Binding Path="UdsmUrsmTestType"/>
                                 <Binding Path="UseUdsmUrsm"/>
                                 <Binding Source="{StaticResource IndexOfReverseInEnum}"/>
                             </MultiBinding>
@@ -400,7 +400,7 @@
                         </Label.Resources>
                         <Label.Visibility>
                             <MultiBinding Converter="{StaticResource MBvtRSMTT2V}">
-                                <Binding Path="TestType"/>
+                                <Binding Path="UdsmUrsmTestType"/>
                                 <Binding Path="UseUdsmUrsm"/>
                                 <Binding Source="{StaticResource IndexOfReverseInEnum}"/>
                             </MultiBinding>
@@ -413,7 +413,7 @@
                         </Label.Resources>
                         <Label.Visibility>
                             <MultiBinding Converter="{StaticResource MBvtRSMTT2V}">
-                                <Binding Path="TestType"/>
+                                <Binding Path="UdsmUrsmTestType"/>
                                 <Binding Path="UseUdsmUrsm"/>
                                 <Binding Source="{StaticResource IndexOfReverseInEnum}"/>
                             </MultiBinding>
@@ -425,7 +425,7 @@
                         </Label.Resources>
                         <Label.Visibility>
                             <MultiBinding Converter="{StaticResource MBvtRSMTT2V}">
-                                <Binding Path="TestType"/>
+                                <Binding Path="UdsmUrsmTestType"/>
                                 <Binding Path="UseUdsmUrsm"/>
                                 <Binding Source="{StaticResource IndexOfReverseInEnum}"/>
                             </MultiBinding>
