--- a/SCME.WpfControlLibrary/DataTemplates/TestParameters/QrrTqDataTemplate.xaml
+++ b/SCME.WpfControlLibrary/DataTemplates/TestParameters/QrrTqDataTemplate.xaml
@@ -17,7 +17,7 @@
     </Grid.Resources>
     <Grid.ColumnDefinitions>
         <ColumnDefinition Width="auto" SharedSizeGroup="Column0" />
-        <ColumnDefinition Width="auto" SharedSizeGroup="Column1"/>
+        <ColumnDefinition Width="*" SharedSizeGroup="Column1"/>
         <ColumnDefinition Width="30" SharedSizeGroup="Column2"/>
         <ColumnDefinition Width="auto" SharedSizeGroup="Column3" />
         <ColumnDefinition Width="*" SharedSizeGroup="Column4"/>
@@ -33,10 +33,10 @@
         <RowDefinition Height="*" />
     </Grid.RowDefinitions>
 
-    <Label Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="4" Content="{x:Static res:Resources.QrrTqMode}" />
-    <ComboBox Grid.Column="4" Grid.Row="0" ItemsSource="{Binding Source={StaticResource TModes}}" DisplayMemberPath="Key" SelectedValuePath="Value" SelectedValue="{Binding Mode}" />
+    <!--<Label Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="1" Content="{x:Static res:Resources.QrrTqMode}" />-->
+    <!--<ComboBox Grid.Column="4" Grid.Row="0" ItemsSource="{Binding Source={StaticResource TModes}}" DisplayMemberPath="Key" SelectedValuePath="Value" SelectedValue="{Binding Mode}" />-->
 
-    <CheckBox Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="5"  Content="{x:Static res:Resources.QrrTqTrrMeasureBy9050Method}" IsChecked="{Binding TrrMeasureBy9050Method}" />
+    <!--<CheckBox Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="5"  Content="{x:Static res:Resources.QrrTqTrrMeasureBy9050Method}" IsChecked="{Binding TrrMeasureBy9050Method}" />
 
     <Label Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="4" Content="{x:Static res:Resources.QrrTqDirectCurrent}" />
     <customControls:NumericUpDown Grid.Column="4" Grid.Row="2" Value="{Binding DirectCurrent}" />
@@ -51,8 +51,10 @@
     <ComboBox Grid.Column="4" Grid.Row="5"  ItemsSource="{Binding Source={StaticResource TDcFallRates}}" DisplayMemberPath="Key" SelectedValuePath="Value" SelectedValue="{Binding DCFallRate}" />
 
     <Label Grid.Column="0" Grid.Row="6"  Grid.ColumnSpan="4" Content="{x:Static res:Resources.QrrTqOffStateVoltage}" />
-    <customControls:NumericUpDown Grid.Column="4" Grid.Row="6" Value="{Binding OffStateVoltage}" />
+    <customControls:NumericUpDown Grid.Column="4" Grid.Row="6" Value="{Binding OffStateVoltage}" />-->
 
-    <Label Grid.Column="0" Grid.Row="7"  Grid.ColumnSpan="4" Content="{x:Static res:Resources.QrrTqOsvRate}" />
-    <ComboBox Grid.Column="4" Grid.Row="7"  ItemsSource="{Binding Source={StaticResource TOsvRates}}" DisplayMemberPath="Key" SelectedValuePath="Value" SelectedValue="{Binding OsvRate}" />
+    <Grid Grid.Column="0" Grid.Row="7">
+    <TextBlock  TextWrapping="WrapWithOverflow"  Text="{x:Static res:Resources.QrrTqOsvRate}" />
+    </Grid>
+    <ComboBox Grid.Column="1" Grid.Row="7"  ItemsSource="{Binding Source={StaticResource TOsvRates}}" DisplayMemberPath="Key" SelectedValuePath="Value" SelectedValue="{Binding OsvRate}" />
 </Grid>
