--- a/SCME.WpfControlLibrary/DataTemplates/TestParameters/ATUDataTemplate.xaml
+++ b/SCME.WpfControlLibrary/DataTemplates/TestParameters/ATUDataTemplate.xaml
@@ -20,8 +20,8 @@
             <RowDefinition Height="*" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <Label Grid.Column="0" Grid.Row="0" Content="{x:Static res:Resources.AtuPrePulseValue}" />
-        <customControls:NumericUpDown Grid.Column="1" Grid.Row="0"  Value="{Binding PrePulseValue}" />
+        <Label Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="4" Content="{x:Static res:Resources.AtuPrePulseValue}" />
+        <customControls:NumericUpDown Grid.Column="4" Grid.Row="0"  Value="{Binding PrePulseValue}" />
 
         <Label Grid.Column="0" Grid.Row="1" Content="{x:Static res:Resources.AtuPowerValueSet}" />
         <customControls:NumericUpDown Grid.Column="1" Grid.Row="1"   Value="{Binding PowerValue}" StringFormat="{}{0:N1}"/>
