--- a/SCME.UI/PagesUser/UserTestPage.xaml
+++ b/SCME.UI/PagesUser/UserTestPage.xaml
@@ -184,7 +184,9 @@
               Grid.Column="3" Grid.Row="0" Grid.RowSpan="6" Margin="0,20" Width="0" />
 
         <Button Name="btnBack" x:FieldModifier="private" Grid.Column="0" Grid.Row="8" Content="{x:Static res:Resources.Back}" Click="Back_Click" Margin="0" TabIndex="7"/>
-        <Button Name="btnSync" x:FieldModifier="private" Grid.Column="1" Grid.Row="8" Content="{x:Static res:Resources.Sync}" Visibility="{Binding SpecialMeasureMode, Converter={StaticResource B2VI}}" Margin="10,0,10,0" Click="BtnSync_OnClick" TabIndex="7"/>
+        <Grid Grid.Column="1" Grid.Row="8" Margin="10,0,10,0" Visibility="{Binding Source={x:Static ui:Cache.Main}, Path=VM.IsLocal, Converter={StaticResource B2VI}}">
+            <Button Name="btnSync" x:FieldModifier="private"  Content="{x:Static res:Resources.Sync}" Visibility="{Binding SpecialMeasureMode, Converter={StaticResource B2VI}}"  Click="BtnSync_OnClick" TabIndex="7"/>
+        </Grid>
         <Button Grid.Column="2" Grid.Row="8" Content="{x:Static res:Resources.Stop}" Background="{StaticResource xRed1}" Click="Stop_Click" Margin="0,0,10,0" TabIndex="8" />
         <Button Name="btnStart" x:FieldModifier="private" Grid.Column="3" Grid.Row="8" Content="{x:Static res:Resources.Start}" Background="{StaticResource xGreen1}" Click="Start_Click" Margin="10,0,0,0" TabIndex="5"/>
     </Grid>
